# comp6841-sap

./: .gitignore  Makefile  sap.org
replica-of-oren/: Makefile  index.html  package-lock.json  package.json  script.js  script.ts  tsconfig.json
report/: report.bib  report.tex
tc-spy-wasm/: Cargo.toml  Makefile
tc-spy-wasm/src/: lib.rs  scratch.rs
tc-spy-wasm/tests/: web.rs
timings/: 2025-07-19-first-timings.json  2025-07-20-cache-miss-penalty-timings.json  2025-07-20-comparison-of-with-without-cache-miss.json  2025-07-21-updated-benchmarks.json  visualise_timing_data.ipynb
www/: an4.html  counter.js  http_server.py  index.html  package-lock.json  package.json  script.ts  shared-array-buffer.html  tsconfig.json
